completed neccesary features

--- a/index.html
+++ b/index.html
@@ -3,10 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="script.js"></script>
+    <title>Rock Paper Scissors</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="game">
+        <h1>Rock Paper Scissors</h1>
+        <div class="buttons">
+            <button id="rock">Rock</button>
+            <button id="paper">Paper</button>
+            <button id="scissors">Scissors</button>
+        </div>
+        <div class="results">
+            <p id="resultMessage"></p>
+            <p>Human Score: <span id="humanScore">0</span></p>
+            <p>Computer Score: <span id="computerScore">0</span></p>
+        </div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
